--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,12 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+version: 2.1
+workflows:
+  say-hello-workflow:
+    jobs:
+      - say-hello
+  build:
+    jobs:
+      - build
 jobs:
   say-hello:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
@@ -17,10 +20,55 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  build:
+    working_directory: /blog
+    docker:
+      - image: docker:17.05.0-ce-git
+    steps:
+      - checkout
+      - setup_remote_docker
+      #- run:
+          #name: Install dependencies
+          #command: |
+            #apk add --no-cache \
+              #py-pip=9.0.0-r1
+            #pip install \
+              #docker-compose==1.12.0 \
+              #awscli==1.11.76
+      - restore_cache:
+          keys:
+            - v1-{{ .Branch }}
+          paths:
+            - /caches/blog.tar
+      - run:
+          name: Load Docker image layer cache
+          command: |
+            set +o pipefail
+            docker load -i /caches/blog.tar | true
+      - run:
+          name: Build application Docker image
+          command: |
+            docker build --cache-from=blog -t blog .
+      - run:
+          name: Save Docker image layer cache
+          command: |
+            mkdir -p /caches
+            docker save -o /caches/blog.tar blog
+      - save_cache:
+          key: v1-{{ .Branch }}-{{ epoch }}
+          paths:
+            - /caches/blog.tar
+      #- run:
+          #name: Run tests
+          #command: |
+            #docker-compose -f ./docker-compose.test.yml up
+      #- deploy:
+          #name: Push application Docker image
+          #command: |
+            #if [ "${CIRCLE_BRANCH}" == "main" ]; then
+              #login="$(aws ecr get-login)"
+              #${login}
+              #docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+              #docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+            #fi
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
-workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
