--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           name: Push application Docker image
           command: |
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
-              echo "$DOCKER_HUB_ACCESS_TOKEN" | docker login --username $DOCKER_HUB_USER --password-stdin
+              docker login --username $DOCKER_HUB_USER --password $DOCKER_HUB_ACCESS_TOKEN
               docker tag app "pevanscfi/blog:${CIRCLE_SHA1}"
               docker push "pevanscfi/blog:${CIRCLE_SHA1}"
             fi
