--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 !/tmp/storage/.keep
 
 /public/assets
+/charts/charts
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
