--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,15 +54,11 @@ jobs:
       - image: docker:17.05.0-ce-git
     steps:
       - run:
-          name: Install YQ
-          command: >
-            curl -L -o ${HOME}/yq
-            https://github.com/mikefarah/yq/releases/download/<< parameters.version
-            >>/yq_linux_amd64
-
-            chmod +x ${HOME}/yq
-
-            ${HOME}/yq --version
+          name: Install yq
+          command: |
+            wget -q https://github.com/mikefarah/yq/releases/download/4.30.6/yq_linux_amd64
+            sudo mv yq_linux_amd64 /usr/local/bin/yq
+            sudo chmod +x /usr/local/bin/yq
       - run:
           name: Checkout the gitops repo
           command: |
