--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,8 @@ jobs:
       - run:
           name: Install yq
           command: |
-            wget -q https://github.com/mikefarah/yq/releases/download/4.30.6/yq_linux_amd64
-            sudo mv yq_linux_amd64 /usr/local/bin/yq
-            sudo chmod +x /usr/local/bin/yq
+            wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/local/bin/yq &&\
+              chmod +x /usr/local/bin/yq
       - run:
           name: Checkout the gitops repo
           command: |
