--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
               git config --global user.email "paul@wevans.io"
               git config --global user.name "Paul"
-              git clone https://github.com/wevanscfi/homelab.git
+              git clone git@github.com:wevanscfi/homelab.git
               cd homelab && ls -l
               yq e -i '(.spec.source.helm.parameters[] | select(.name == "image.tag")).value = "'"$CIRCLE_SHA1"'"' manifests/apps/templates/blog.yaml
               git add manifests/apps/templates/blog.yaml
