--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,12 +59,15 @@ jobs:
     docker:
       - image: pevanscfi/ops-toolbox:latest
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "ef:9b:5b:60:63:61:04:a9:52:32:e7:cd:0b:d7:a2:43"
       - run:
           name: Checkout the gitops repo
           command: |
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
-              git config --global user.email "paul@wevans.io"
-              git config --global user.name "Paul"
+              git config --global user.email "paul+circleci@wevans.io"
+              git config --global user.name "CircleCI"
               git clone git@github.com:wevanscfi/homelab.git
               cd homelab && ls -l
               yq e -i '(.spec.source.helm.parameters[] | select(.name == "image.tag")).value = "'"$CIRCLE_SHA1"'"' manifests/apps/templates/blog.yaml
