--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
             git config --global user.email "paul+circleci@wevans.io"
             git config --global user.name "CircleCI"
             git clone git@github.com:wevanscfi/homelab.git
-            cd homelab && ls -l
+            cd homelab
             yq e -i '(.spec.source.helm.parameters[] | select(.name == "image.tag")).value = "'"$CIRCLE_SHA1"'"' manifests/apps/templates/blog.yaml
             git add manifests/apps/templates/blog.yaml
             git commit -m "Deploy blog: ${CIRCLE_SHA1}"
