--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -38,6 +38,8 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           env:
+            - name: RAILS_ENV
+              value: {{ .Values.rails_env }}
             - name: DATABASE_HOST
               value: {{ template "postgresql.fullname" . }}
             - name: POSTGRES_PASSWORD
