--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -40,7 +40,9 @@ service:
   type: ClusterIP
   port: 3000
 
-rails_env: development
+application:
+  env:
+    rails_env: development
 
 postgres:
   enabled: true
