--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -38,8 +38,10 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           env:
-            - name: RAILS_ENV
-              value: {{ .Values.rails_env }}
+            {{- range $key, $value := .Values.application.env }}
+            - name: {{ $key | upper }}
+              value: {{ $value }}
+            {{- end }}
             - name: DATABASE_HOST
               value: {{ template "postgresql.fullname" . }}
             - name: POSTGRES_PASSWORD
