--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
   build_and_push:
     working_directory: /blog
     docker:
-      - image: docker:17.05.0-ce-git
+      - image: cimg/base:2023.02
     steps:
       - checkout
       - setup_remote_docker
