store coverage artifacts for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,8 @@ jobs:
             mkdir coverage
             docker run -v coverage:/opt/app/coverage -e "RAILS_ENV=test" blog bundle exec rspec
             ./cc-test-reporter format-coverage -t simplecov -o tmp/codeclimate.json coverage/.resultset.json
+      - store_artifacts:
+          path: coverage
       - run:
           name: Save Docker image layer cache
           command: |
