--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           command: |
             mkdir coverage
             docker run -v coverage:/opt/app/coverage -e "RAILS_ENV=test" blog bundle exec rspec
-            (docker run -v coverage:/opt/app/coverage blog cat coverag/.resultset) > coverage/.resultset.json
+            (docker run -v coverage:/opt/app/coverage blog cat coverage/.resultset) > coverage/.resultset.json
             ./cc-test-reporter format-coverage -t simplecov -o tmp/codeclimate.json coverage/.resultset.json
       - run:
           name: Save Docker image layer cache
