Come on dang it

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           name: Run rspec tests
           command: |
             mkdir coverage
-            docker run -v coverage:/opt/app/coverage -e "RAILS_ENV=test" blog bundle exec rspec
+            docker run -v $(pwd)/coverage:/opt/app/coverage -e "RAILS_ENV=test" blog bundle exec rspec
             ./cc-test-reporter format-coverage -t simplecov coverage/.resultset.json
       - run:
           name: Save Docker image layer cache
