--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,9 @@ jobs:
           command: |
             mkdir coverage
             docker run -v $(pwd)/coverage:/opt/app/coverage -e "RAILS_ENV=test" -e "CC_TEST_REPORTER_ID=$CC_TEST_REPORTER_ID" blog bundle exec rspec
-            jq 'walk(try .lines // .)' coverage/.resultset.json > coverage/.resultset.json
-            ./cc-test-reporter format-coverage -t simplecov coverage/.resultset.json
+            jq 'walk(try .lines // .)' coverage/.resultset.json > coverage/.resultset_fixed.json
+            ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.json coverage/.resultset_fixed.json
+            ./cc-test-reporter upload-coverage
       - run:
           name: Save Docker image layer cache
           command: |
