--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,11 @@ jobs:
             docker run -v $(pwd)/coverage:/opt/app/coverage -e "RAILS_ENV=test" blog bundle exec rspec
             ./cc-test-reporter format-coverage -t simplecov coverage/.resultset.json
             ./cc-test-reporter upload-coverage
+      - run:
+          name: Report test coverage
+          command: |
+            ./cc-test-reporter format-coverage -t simplecov coverage/.resultset.json
+            ./cc-test-reporter upload-coverage
       - deploy:
           condition:
             - equal: [ main, << pipeline.git.branch >> ]
