Setup DB migrate job

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -46,6 +46,11 @@ application:
 
 postgres:
   enabled: true
+  primary:
+    resources:
+      requests:
+        cpu: 50m
+        memory: 256Mi
 
 ingress:
   enabled: false
