Ordering DB migration

--- a/charts/templates/db-migrate-job.yaml
+++ b/charts/templates/db-migrate-job.yaml
@@ -3,7 +3,8 @@ kind: Job
 metadata:
   generateName: {{ include "blog.fullname" . }}-db-migrate-
   annotations:
-    argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/sync-wave: "-5"
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
   labels:
     {{- include "blog.labels" . | nindent 4 }}
