--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -46,6 +46,8 @@ application:
 
 postgres:
   enabled: true
+  commonAnnotations:
+    argocd.argoproj.io/sync-wave: "-10"
   primary:
     resources:
       requests:
