Update job restart policy

--- a/charts/templates/db-migrate-job.yaml
+++ b/charts/templates/db-migrate-job.yaml
@@ -23,6 +23,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "blog.serviceAccountName" . }}
+      restartPolicy: Never
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
