--- a/charts/Chart.yaml
+++ b/charts/Chart.yaml
@@ -8,4 +8,4 @@ dependencies:
 - name: postgresql
   version: 12.1.9
   repository: https://charts.bitnami.com/bitnami
-  condition: postgres.enabled
+  condition: postgresql.enabled
