--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -15,6 +15,7 @@ spec:
     metadata:
       {{- with .Values.podAnnotations }}
       annotations:
+        argocd.argoproj.io/sync-wave: "10"
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
