--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -23,7 +23,8 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations: {}
+podAnnotations:
+  argocd.argoproj.io/sync-wave: "10"
 
 podSecurityContext: {}
   # fsGroup: 2000
