--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -23,8 +23,7 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
-podAnnotations:
-  argocd.argoproj.io/sync-wave: "10"
+podAnnotations: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
