--- a/charts/templates/db-migrate-job.yaml
+++ b/charts/templates/db-migrate-job.yaml
@@ -32,7 +32,7 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["bundle", "exec", "rake", "db:migrate"]
+          command: ["bundle", "exec", "rake", "db:create", "db:migrate"]
           env:
             {{- range $key, $value := .Values.application.env }}
             - name: {{ $key | upper }}
