--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  database: blog-test
+  database: db/test.sqlite3
   adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
