--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -72,11 +72,11 @@ spec:
                   key: postgres-password
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthcheck
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthcheck
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
