--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
       image: ubuntu-2004:202010-01
       docker_layer_caching: true
     steps:
-      - push_image:
+      - run:
           name: Push application Docker image
           command: |
             docker login --username $DOCKER_HUB_USER --password $DOCKER_HUB_ACCESS_TOKEN
