--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,6 @@ workflows:
       - rspec:
           requires:
             - build
-      - push:
-          requires:
-            - build
-            - cypress/run
-            - rspec
       - promote:
           filters:
             branches:
@@ -26,7 +21,8 @@ workflows:
                 - main
           type: approval
           requires:
-            - push
+            - cypress/run
+            - rspec
       - deploy:
           filters:
             branches:
@@ -45,6 +41,11 @@ jobs:
           name: Build application Docker image
           command: |
             docker build --cache-from=blog -t "pevanscfi/blog:${CIRCLE_SHA1}" .
+      - run:
+          name: Push application Docker image
+          command: |
+            docker login --username $DOCKER_HUB_USER --password $DOCKER_HUB_ACCESS_TOKEN
+            docker push "pevanscfi/blog:${CIRCLE_SHA1}"
   rspec:
     machine: # executor type
       image: ubuntu-2004:202010-01
