Run cypress in a container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ workflows:
                 - main
           type: approval
           requires:
-            - cypress/run
+            - cypress
             - rspec
       - deploy:
           filters:
