try without docker host network

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,16 +72,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install xvfb
-          command: sudo apt install -y xvfb
-      - run:
           name: Run start server
           command: |
             docker run -d -p 3000:3000 -e "RAILS_ENV=test" "pevanscfi/blog:${CIRCLE_SHA1}"
       - run:
           name: Run E2E tests
           command: |
-            docker run -it -v $PWD:/e2e -w /e2e --network="host" cypress/included:12.6.0
+            docker run -it -e CYPRESS_baseUrl=http://host.docker.internal:3000 -v $PWD:/e2e -w /e2e  cypress/included:12.6.0
 
   deploy:
     working_directory: /
