--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Run start server
+          name: Start server
           command: |
             docker run -d -p 3000:3000 -e "RAILS_ENV=test" "pevanscfi/blog:${CIRCLE_SHA1}" bash -c "rake db:create db:migrate db:seed && bundle exec rails s"
       - run:
